--- a/CHL-Frontend/src/app/employee-list/employee-list.component.html
+++ b/CHL-Frontend/src/app/employee-list/employee-list.component.html
@@ -4,6 +4,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email Id</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -11,6 +12,10 @@
             <td>{{employee.firstName}}</td>
             <td>{{employee.lastName}}</td>
             <td>{{employee.email}}</td>
+            <td>
+                <button (click) = "updateEmployee(employee.id)" class="btn btn-success">Update</button>
+                <button (click) = "deleteEmployee(employee.id)" class="btn btn-danger">Delete</button>
+            </td>
         </tr>
     </tbody>
 </table>
