--- a/CHL-Frontend/src/app/employee-list/employee-list.component.html
+++ b/CHL-Frontend/src/app/employee-list/employee-list.component.html
@@ -15,6 +15,7 @@
             <td>
                 <button (click) = "updateEmployee(employee.id)" class="btn btn-success">Update</button>
                 <button (click) = "deleteEmployee(employee.id)" class="btn btn-danger">Delete</button>
+                <button (click) = "onEmployeeClick(employee.id)" class="btn btn-warning">View</button>
             </td>
         </tr>
     </tbody>
